--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 mtspec>=0.3.2
 numpy>=1.18.1
 PyYAML>=6.0
-scikit_image>=0.17.2
+scikit-image>=0.17.2
 scipy>=1.4.1
-skimage>=0.0
 statsmodels>=0.11.0
